# ocaml-exercises

./: .gitignore  99-exercises.ml  README.md  dune-project  exercises.cmi  exercises.cmo  exercises.ml  ocaml-exercises.opam
official/: dune  exercises.ml  test.ml
